--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="parallax-container">
         <div class="parallax"></div>
         <div class="content">
-            <!-- Your content goes here -->
+            hello world
         </div>
     </div>
     <script src="script.js"></script>
